# Object-Classification-for-vehicle

./: README.md
ball_detection/: .env.example  .gitignore  README.md  hfov.py  main.py  pyproject.toml  requirements.txt
car_motor and camera/: cam_servo.ino  camera_get_image.ino  motor.ino
carservo/WiFiManualWebServer_esp8266_servo/: WiFiManualWebServer_esp8266_servo.ino
